# hermes-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: 2026-04-17-acp-integration-design.md  roadmap-0.6-0.7.md
docs/plans/: 2025-04-17-claude-code-ui-overhaul.md  2026-04-17-feature-parity.md  2026-04-17-post-030-polish.md  2026-04-18-fix-token-counting.md  2026-04-19-md-fixes-and-copy-mode.md  2026-04-19-picker-scroll-fixes.md  2026-04-19-return-to-picker.md  2026-04-19-subagent-zoom-view.md  2026-04-19-v0.9-search-and-picker.md
docs/specs/: 2026-04-18-portfolio-site-design.md
site/: index.html
src/: acp.rs  api.rs  app.rs  event.rs  main.rs  ui.rs  ui_copy_mode.rs  ui_effort.rs  ui_file_popup.rs  ui_palette.rs  ui_picker.rs  ui_search.rs  ui_subagent_zoom.rs
